Fixed player list alignment in game

--- a/css/game.css
+++ b/css/game.css
@@ -95,6 +95,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    text-align: left;
 }
 
 .player-info-game > .player-goose-image {
